fixed sign in buttons not showing on first render. provisional fix for login-button-container height

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -5,16 +5,17 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 46px 0 0;
+  padding: 46px 0;
 }
 
 .login-button-container {
   background-color: white;
-  height: 1000px;
-  width: 679px;
+  /* height: 50%; */
+  width: 40%;
+  min-width: 365px;
   border-radius: 21px;
   margin: 0 auto;
-  padding: 65px 0 0;
+  padding: 45px 0 15px;
 }
 
 .logo {
